kubernetes/mongo_k8s_02/mongo-express/02a-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-external-service
  namespace: mongo
spec:
  selector:
    app: mongo-express
  #specifying 'loadBalancer' makes this into an external service (somehow). Assigns an external IP address.
  #This is one way to make your application accessible externally, but to make a DNS name + support httpS - then you need an ingress.
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      #Port for the browser - has a range between 30000 and 32767
      nodePort: 30001
