kubernetes/mongo_k8s_02/mongo-express/02b-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-internal-service
  namespace: mongo
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
